--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "portfolioupdate",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://michaldouglasvg.github.io/portfolioupdate",
   "dependencies": {
     "@coreui/coreui": "^4.2.6",
     "@coreui/react": "^4.6.0",
@@ -33,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
