--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.3",
+    "swiper": "^9.1.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
